force-app/main/default/objects/Food__c/Food__c.object-meta.xml
<CustomObject>
    <label>Food</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Food Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>