force-app/main/default/objects/Food__c/fields/Lunch__c.field-meta.xml
<CustomField>
    <fullName>Lunch__c</fullName>
    <label>Lunch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burger</fullName>
            </value>
            <value>
                <fullName>Kebab</fullName>
            </value>
            <value>
                <fullName>Chips</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>